# SeniorPlayback

./: gstreamer.docx
minimalGStreamer/: CMakeLists.txt  main.cpp
